add:フラグ作成、詳細ページの実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,11 @@
 ja:
   activerecord:
+    models:
+      flag: "フラグ"
     attributes:
+      flag:
+        title: "「 フラグタイトル 」"
+        content: "「 フラグ内容 」"
       story:
         title: "タイトル"
         genre: "ジャンル"
